fixes submit button on tablet/phones

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -20,3 +20,6 @@ footer{
 iframe{
 	margin-top: 20px;
 }
+.btn-success{
+	float: none;
+}
